1.12.0 (03/22/2015)

1. Cleaning.

1.11.9 (07/23/2014)

1. Temporary files must be opened for reading.

1.11.8 (07/21/2014)

1. Do not print /dev/null to standard output if fopen() fails.
   If use is executed with elevated privileges, /dev/null may be removed.
2. Open temporary files for appending instead of appending and reading.
3. Use mkstemp() to create a temporary file.

1.11.7 (07/16/2014)

1. The user's home will now be used to house temporary files. If a home
   is not available, /tmp will be used.

1.11.6 (06/18/2014)

1. Modified the manual.
2. Version remains at 1.11.6.

1.11.6 (06/15/2014)

1. Use %ld specifier for pid_t and uid_t in snprintf().

1.11.5 (05/10/2014)

1. Added the g flag to debug builds.
2. Changed the default manual location to /usr/share/man/man1 in configure.pl.
3. Improved error messages.
4. Modified the manual page, informing the user that product order is
   important.

1.11.4 (05/03/2014)

1. Added support for DYLD_LIBRARY_PATH on OS X.
2. Added the t command-line option, allowing for alternate use tables.

1.11.3 (04/21/2014)

1. Compiler flags.
2. Environment variables that are not defined are not properly initialized.
   Corrected.

1.11.2 (04/18/2014)

1. Added compiler flags.
2. Version remains at 1.11.2.

1.11.2 (04/09/2014)

1. Shell scripts should not exit as terminals shall be closed.

1.11.1 (04/04/2014)

1. Clear buffers before and after fgets().
2. Test argv in validate().
3. Verify that stdout is valid.

1.11.0 (03/20/2014)

1. Inspect argv[].

1.10.9 (03/14/2014)

1. Guard against invalid _stdout_.

1.10.8 (02/28/2014)

1. Added the Wconversion and Wformat compiler flags.
2. Replaced GCC with CC in Makefile.mk.
3. Replaced GCC_OPTIONS with CC_OPTIONS in Makefile.mk.

1.10.7 (02/24/2014)

1. Added formats to all fprintf() statements.
2. Included codes in shell exits.
3. Use /bin instead of /usr/bin in shell scripts.

1.10.6 (02/18/2014)

1. Clear buffers before using snprintf().

1.10.5 (02/06/2014)
